# SDDNN

./: .gitignore  dataset.py  main.py  model.py  note.md  train_device_classifier.py  trainer.py
LinkUsage/: Makefile  pom.xml
LinkUsage/src/main/scala/linkusage/: AppComponent.scala  Intent.scala
LinkUsage/src/test/scala/linkusage/: AppComponentTest.scala
Model/: Cargo.toml
Model/src/: lib.rs
SDDNNcontroller/: Makefile  pom.xml
SDDNNcontroller/src/main/scala/sddnn/: AppComponent.scala  Intent.scala
SDDNNcontroller/src/test/scala/sddnn/: AppComponentTest.scala
