[package]
name = "model"
version = "0.1.0"
authors = ["skye347 <s347419313@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.1.1"
tokio = "0.1"
actix = "0.8"
futures = "0.1"
bytes = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.4"
chrono = "0.4"
flate2 = { version = "1", features = ["tokio","rust_backend"] }